Cambio de contacto y servicios

--- a/THL/pages/brand_talent_relations.html
+++ b/THL/pages/brand_talent_relations.html
@@ -15,13 +15,14 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Hidden London - Google +</title>
+    <title>The Hidden London - Brand & Talent Relations
+        <</title>
 
-    <link href="../css/plugins.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link rel="canonical" href="index.htm">
+            <link href="../css/plugins.css" rel="stylesheet">
+            <link href="../css/style.css" rel="stylesheet">
+            <link rel="canonical" href="index.htm">
 
-    <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+            <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
 <body>
@@ -35,6 +36,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
+
                     </div>
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
@@ -76,17 +78,18 @@
                             <nav>
                                 <ul>
                                     <li><a style="color:#314145" href="../index.htm">Home</a></li>
-                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
+                                    <li><a style="color:#314145" href="./services.html" class="dropdown">Services</a>
+                                        <!-- <ul class="dropdown-menu">
                                             <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
-                                            <li><a style="color:#314145" href="./google.html">Google +</a></li>
-                                        </ul>
+                                            <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
+                                            <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
+                                        </ul> -->
                                     </li>
-                                    <li><a style="color:#314145" href="#">Contact</a></li>
-                                    <li><a style="color:#314145" href="#">About Us</a></li>
+                                    <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
+                                    <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -97,36 +100,40 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-video="../video/200422 _Digital Media Icons_01_4k_035.mp4">
-                <div class="bg-overlay"></div>
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/youtube-banner.jpg">
+                <!-- <div class="bg-overlay"></div> -->
                 <div class="container">
                     <div class="slide-captions text-light">
                         <!-- Captions -->
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Brand & Talent Relations
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
                 </div>
+                <a class="arrowScrollDown ancla" href="#section">
+
+                    <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
+                </a>
             </div>
             <!-- end: Slide 1 -->
         </div>
         <!-- Container -->
-        <section>
+        <section id="section" class="background-grey">
             <div class="container">
                 <div class="heading-text heading-section">
-                    <h2 id="ecosystem">Google +</h2>
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Google +.</span>
+                    <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
+                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Brand & Talent Relations.</span>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/diseño-web.jpg" alt="" class="img-fluid">
+                        <img src="../images/fondos/youtube-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Google +, which reaches millions of users, transcending borders.</p>
+                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Brand & Talent Relations, which reaches millions of users, transcending borders.</p>
                         <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
                         <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
                     </div>
