--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -132,28 +132,28 @@
                 </div>
                 <div class="box-content box-facebook" data-animate="flipInY" data-animate-delay="0">
                     <div class="card-thl">
-                        <a style="color: #fff">
+                        <a style="color: #fff" href="./production_content_creation.html">
                             <h3 class="text-center">Production & Content Creation</h3>
                         </a>
                     </div>
                 </div>
                 <div class="box-content box-twitter" data-animate="flipInY" data-animate-delay="0">
                     <div class="card-thl">
-                        <a style="color: #fff">
+                        <a style="color: #fff" href="./digital_data_marketing.html">
                             <h3 class="text-center">Digital Data & Marketing</h3>
                         </a>
                     </div>
                 </div>
                 <div class="box-content box-50 box-youtube" data-animate="flipInY" data-animate-delay="0">
                     <div class="card-thl">
-                        <a style="color: #fff">
+                        <a style="color: #fff" href="brand_talent_relations.html">
                             <h3 class="text-center">Brand & Talent Relations</h3>
                         </a>
                     </div>
                 </div>
                 <div class="box-content box-50 box-soudcould" data-animate="flipInY" data-animate-delay="0">
                     <div class="card-thl">
-                        <a style="color: #fff">
+                        <a style="color: #fff" href="./legal_compliance.html">
                             <h3 class="text-center">Legal & Compliance</h3>
                         </a>
                     </div>
