--- a/THL/pages/brand.html
+++ b/THL/pages/brand.html
@@ -15,7 +15,7 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Hidden London - Youtube</title>
+    <title>The Hidden London - Contact</title>
 
     <link href="../css/plugins.css" rel="stylesheet">
     <link href="../css/style.css" rel="stylesheet">
@@ -76,15 +76,15 @@
                             <nav>
                                 <ul>
                                     <li><a style="color:#314145" href="../index.htm">Home</a></li>
-                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
+                                    <li><a style="color:#314145" href="./services.html" class="dropdown">Services</a>
+                                        <!-- <ul class="dropdown-menu">
                                             <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
                                             <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
                                             <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
                                     <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
@@ -98,7 +98,7 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-parallax="../images/fondos/youtube-banner.jpg">
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/constact.jpg">
                 <div class="bg-overlay"></div>
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -106,40 +106,79 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Get in contact
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
                 </div>
-                <a class="arrowScrollDown ancla" href="#section">
+                <a class="arrowScrollDown ancla" href="#constact">
 
                     <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
                 </a>
             </div>
             <!-- end: Slide 1 -->
         </div>
-        <!-- Container -->
-        <section id="section" class="background-grey">
+        <!-- Contact -->
+        <section id="constact" class="p-t-150 background-grey" data-bg-video="../video/video1.mp4">
             <div class="container">
-                <div class="heading-text heading-section">
-                    <h2 id="ecosystem">Youtube</h2>
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Youtube.</span>
-                </div>
-
                 <div class="row">
-                    <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/youtube-destacada.jpg" alt="" class="img-fluid">
+                    <div class="col-lg-12">
+                        <div class="row">
+                            <div class="col-lg-12">
+                                <div class="heading-text heading-section">
+                                    <h2 id="contact">Brand</h2>
+                                    <p class="lead">Have questions or concerns? Than please reach out to us by email or through the contact form on the right.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Youtube, which reaches millions of users, transcending borders.</p>
-                        <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
-                        <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
+                    <div class="col-lg-12">
+
+                        <form class="widget-contact-form" novalidate="" action="include/contact-form.php" role="form" method="post">
+                            <div class="row">
+                                <div class="form-group col-md-6">
+                                    <label for="name">Name</label>
+                                    <input type="text" aria-required="true" required="" name="widget-contact-form-name" class="form-control required name" placeholder="Enter your Name">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="name">Last Name</label>
+                                    <input type="text" aria-required="true" required="" name="widget-contact-form-last-name" class="form-control required name" placeholder="Last Name">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="name">Choose an option</label>
+                                    <select name="widget-contact-form-last-option" id="" class="form-control">
+                                        <option value="">Choose an option</option>
+                                        <option value="Brand" >Brand</option>
+                                        <option value="Influencer" >Influencer</option>
+                                    </select>
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="email">Email</label>
+                                    <input type="email" aria-required="true" required="" name="widget-contact-form-email" class="form-control required email" placeholder="Enter your Email">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="name">Company</label>
+                                    <input type="text" aria-required="true" required="" name="widget-contact-form-company" class="form-control required name" placeholder="Company">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="name">Monthly Social Media Marketing Budget</label>
+                                    <input type="text" aria-required="true" required="" name="widget-contact-form-Monthly" class="form-control required name" placeholder="Enter your Monthly Social Media Marketing Budget">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="message">Message</label>
+                                <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Enter your Message"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <button class="btn btn-light" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
+                            </div>
+                        </form>
+
                     </div>
                 </div>
             </div>
-
         </section>
-        <!-- Fin Container -->
+        <!-- end: Contact -->
         <!-- Footer -->
         <footer id="footer">
             <div class="copyright-content">
