--- a/THL/pages/contacto.html
+++ b/THL/pages/contacto.html
@@ -76,17 +76,17 @@
                             <nav>
                                 <ul>
                                     <li><a style="color:#314145" href="../index.htm">Home</a></li>
-                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
+                                    <li><a style="color:#314145" href="./services.html" class="dropdown">Services</a>
+                                        <!-- <ul class="dropdown-menu">
                                             <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
                                             <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
                                             <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
-                                    <li><a style="color:#314145" href="../index.htm#constact">Contact</a></li>
+                                    <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
                                     <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
                                 </ul>
                             </nav>
@@ -106,12 +106,12 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Get in contact
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
                 </div>
-                <a class="arrowScrollDown ancla" href="#section">
+                <a class="arrowScrollDown ancla" href="#constact">
 
                     <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
                 </a>
@@ -119,62 +119,32 @@
             <!-- end: Slide 1 -->
         </div>
         <!-- Contact -->
-        <section id="constact" class="p-t-150 background-grey" data-bg-video="../video/video1.mp4">
+        <section id="constact" class="p-t-150 p-b-150 background-grey" data-bg-parallax="../images/fondos/Start_Here.jpg">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <div class="heading-text heading-section">
-                                    <h2 id="contact">Get in Touch with Us</h2>
-                                    <p class="lead">Have questions or concerns? Than please reach out to us by email or through the contact form on the right.</p>
+                    <div class="col-12 text-center">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-12 col-lg-12 mb-5">
+                                    <h2 class="mb-5" style="color: #fff">Start Here</h2>
                                 </div>
-                            </div>
-                            <div class="col-lg-6 m-b-30">
-                                <address>
-                                    <strong>Headquarters Belize:</strong><br>
-                                    Sigany LTD #1 Mapp Street<br>
-                                    Belize City, Belize<br><br>
-                                </address>
-                                <strong>Email:</strong> belize@THL.network
-                            </div>
-                            <div class="col-lg-12 m-b-30">
-                                <h4>We are social</h4>
-
-                                <div class="social-icons social-icons-light social-icons-colored-hover">
-                                    <ul>
-                                        <li class="social-facebook"><a href="https://www.facebook.com/The-Hidden-London-106528494879638/?ref=page_internal" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
-                                        <li class="social-twitter"><a href="https://twitter.com/TheHiddenLondon" target="_blank"><i class="fab fa-twitter"></i></a></li>
-                                        <li class="social-instagram"><a href="https://www.instagram.com/thehiddenlondon/" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                                        <!-- <li class="social-google"><a href="#"><i style="color:#314145" class="fab fa-google-plus-g"></i></a></li>
-                                        <li class="social-youtube"><a href="#"><i style="color:#314145" class="fab fa-youtube"></i></a></li>
-                                        <li class="social-soundcloud"><a href="#"><i style="color:#314145" class="fab fa-soundcloud"></i></a></li> -->
-                                    </ul>
+                                <div class="col-12 col-lg-4 text-center">
+                                    <h5 style="color: #fff">Brand</h5>
+                                    <hr>
+                                    <a href="./brand.html" class="btn btn-thl">Find the rigth  talent</a>
+                                </div>
+                                <div class="col-12 col-lg-4 text-center">
+                                    <h5 style="color: #fff">Talent</h5>
+                                    <hr>
+                                    <a href="./talent.html" class="btn btn-thl">Brand partnership SingUp</a>
+                                </div>
+                                <div class="col-12 col-lg-4 text-center">
+                                    <h5 style="color: #fff">General enquires</h5>
+                                    <hr>
+                                    <a href="./general_equires.html" class="btn btn-thl">Find the rigth  General enquires</a>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-5 offset-1">
-                        <form class="widget-contact-form" novalidate="" action="include/contact-form.php" role="form" method="post">
-                            <div class="row">
-                                <div class="form-group col-md-6">
-                                    <label for="name">Name</label>
-                                    <input type="text" aria-required="true" required="" name="widget-contact-form-name" class="form-control required name" placeholder="Enter your Name">
-                                </div>
-                                <div class="form-group col-md-6">
-                                    <label for="email">Email</label>
-                                    <input type="email" aria-required="true" required="" name="widget-contact-form-email" class="form-control required email" placeholder="Enter your Email">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea type="text" required="" name="widget-contact-form-message" rows="8" class="form-control required" placeholder="Enter your Message"></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button class="btn btn-light" type="submit" id="form-submit"><i class="fa fa-paper-plane"></i>&nbsp;Send message</button>
-                            </div>
-                        </form>
-
                     </div>
                 </div>
             </div>
