--- a/THL/pages/legal_compliance.html
+++ b/THL/pages/legal_compliance.html
@@ -15,13 +15,14 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Hidden London - Campaing Strategy</title>
+    <title>The Hidden London - Legal & Compliance
+        <</title>
 
-    <link href="../css/plugins.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link rel="canonical" href="index.htm">
+            <link href="../css/plugins.css" rel="stylesheet">
+            <link href="../css/style.css" rel="stylesheet">
+            <link rel="canonical" href="index.htm">
 
-    <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+            <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
 <body>
@@ -99,7 +100,7 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-parallax="../images/fondos/instagram-banner.jpg">
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/soudcould-banner.jpg">
                 <!-- <div class="bg-overlay"></div> -->
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -107,7 +108,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">Campaing Strategy
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Legal & Compliance
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -124,15 +125,15 @@
             <div class="container">
                 <div class="heading-text heading-section">
                     <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Campaing Strategy.</span>
+                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Legal & Compliance.</span>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/intagram-destacada.jpg" alt="" class="img-fluid">
+                        <img src="../images/fondos/soudcould-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Campaing Strategy, which reaches millions of users, transcending borders.</p>
+                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Legal & Compliance, which reaches millions of users, transcending borders.</p>
                         <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
                         <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
                     </div>
