--- a/THL/pages/production_content_creation.html
+++ b/THL/pages/production_content_creation.html
@@ -15,13 +15,14 @@
     <link rel="icon" type="image/png" href="../images/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <title>The Hidden London - Instagram</title>
+    <title>The Hidden London - Production & Content Creation
+        <</title>
 
-    <link href="../css/plugins.css" rel="stylesheet">
-    <link href="../css/style.css" rel="stylesheet">
-    <link rel="canonical" href="index.htm">
+            <link href="../css/plugins.css" rel="stylesheet">
+            <link href="../css/style.css" rel="stylesheet">
+            <link rel="canonical" href="index.htm">
 
-    <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+            <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
 </head>
 
 <body>
@@ -77,15 +78,15 @@
                             <nav>
                                 <ul>
                                     <li><a style="color:#314145" href="../index.htm">Home</a></li>
-                                    <li><a style="color:#314145" href="#" class="dropdown">Services</a>
-                                        <ul class="dropdown-menu">
+                                    <li><a style="color:#314145" href="./services.html" class="dropdown">Services</a>
+                                        <!-- <ul class="dropdown-menu">
                                             <li><a style="color:#314145" href="./instagram.html">Instagram</a></li>
                                             <li><a style="color:#314145" href="./facebook.html">Facebook</a></li>
                                             <li><a style="color:#314145" href="./twitter.html">Twitter</a></li>
                                             <li><a style="color:#314145" href="./youtube.html">Youtube</a></li>
                                             <li><a style="color:#314145" href="./tiktok.html">Tik Tok</a></li>
                                             <li><a style="color:#314145" href="./soundcloud.html">Soundcloud</a></li>
-                                        </ul>
+                                        </ul> -->
                                     </li>
                                     <li><a style="color:#314145" href="../pages/contacto.html">Contact</a></li>
                                     <li><a style="color:#314145" href="../index.htm#learnmore">About Us</a></li>
@@ -99,7 +100,7 @@
         </header>
         <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
             <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-parallax="../images/fondos/soudcould-banner.jpg">
+            <div class="slide kenburns" data-bg-parallax="../images/fondos/facebook-banner.jpg">
                 <!-- <div class="bg-overlay"></div> -->
                 <div class="container">
                     <div class="slide-captions text-light">
@@ -107,7 +108,7 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
 
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">We are a company<br>Celebrity Social Media Manager
+                        <h1 data-animate="fadeInUp" data-animate-delay="600">Production & Content Creation
                             <font color="#0f2123">.</font>
                         </h1>
                     </div>
@@ -123,16 +124,16 @@
         <section id="section" class="background-grey">
             <div class="container">
                 <div class="heading-text heading-section">
-                    <h2 id="ecosystem">Soundcloud</h2>
-                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Soundcloud.</span>
+                    <!-- <h2 id="ecosystem">Campaing Strategy</h2> -->
+                    <span class="lead">There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation.</span>
                 </div>
 
                 <div class="row">
                     <div class="col-lg-6 col-12">
-                        <img src="../images/fondos/soudcould-destacada.jpg" alt="" class="img-fluid">
+                        <img src="../images/fondos/facebook-destacada.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-lg-6 col-12">
-                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Soundcloud, which reaches millions of users, transcending borders.</p>
+                        <p>There are people who have a good number of followers, all of them interested in knowing their daily life through a social network, as is the case of Production & Content Creation, which reaches millions of users, transcending borders.</p>
                         <p>We know that this is your case, which is why THL wants to have you as one of its exclusive clients and that you can take advantage of our vast experience in the management of social networks </p>
                         <p>and in the updated content that your followers want to find; but committed to respecting the conditions that are important to you, in terms of the management of the same.</p>
                     </div>
