Cambio de servicios

--- a/THL/index.htm
+++ b/THL/index.htm
@@ -100,10 +100,10 @@
                         <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
                         </span> -->
                         <span class="texto-banner">A forward-thinking marketing agency using data and innovative strategies to provide influential and effective campaigns.</span>
-                        <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden London
+                        <h1 class="m-0" data-animate="fadeInUp" data-animate-delay="600">We are <br>The Hidden <br> London
                             <font color="#0f2123">.</font>
                         </h1>
-                        <h5 class="fuente-banner">A new generation of culture</h5>
+                        <h5 class="fuente-banner"><i>A new generation of culture</i></h5>
                         <div data-animate="fadeInUp" data-animate-delay="900">
                             <button type="button" class="btn btn-rounded btn-reveal btn-reveal-left"><span><a href="#Services">Learn More</a></span><i class="fa fa-arrow-right"></i></button>
                         </div>
@@ -113,9 +113,38 @@
             </div>
             <!-- end: Slide 1 -->
         </div>
+        <!-- Learn more -->
+        <section class="p-t-120" data-bg-video="./video/aboutMe.mp4">
+            <div class="container">
+                <div class="col-lg-8 m-b-100 center">
+                    <div class="heading-text heading-section text-center">
+                        <h2 style="color: #fff;" id="learnmore">Who we are</h2>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">We are London’s fastest growing agency representing talent and brands across the world.</p>
+                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
+                    </div>
+                </div>
+            </div>
 
+
+        </section>
+        <!-- end: Learn more -->
+        <!-- More -->
+        <section class="background-grey p-t-120 p-b-120">
+
+            <div class="container">
+
+                <div class="col-lg-8 m-b-100 center">
+                    <div class="heading-text heading-section text-center">
+                        <h2 id="wiki">What we focus on</h2>
+                        <p>We work with a vast array of influences and talents from emerging, to high profile. This includes social media influencers, musicians, actors, entertainers and sportsmen’s. We take pride in creating a diverse, jovial community,
+                            brining the best opportunities and representation for clients and</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- end: Team -->
         <!-- Our numbers -->
-        <section class="p-t-200 p-b-100" data-bg-parallax="./images/team.jpg">
+        <!-- <section class="p-t-200 p-b-100" data-bg-parallax="./images/team.jpg">
             <div class="container xs-text-center sm-text-center text-light">
                 <div class="bg-overlay"></div>
                 <div class="row">
@@ -165,7 +194,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- end: Our numbers -->
 
         <!-- More -->
@@ -193,7 +222,6 @@
 
                             <img src="./images/redes/actors.jpg" alt="Actores">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Actors</span>
                     </div>
                     <!-- end: Team item-->
@@ -203,7 +231,6 @@
                         <div class="cotent-img">
                             <img src="./images/redes/reporters.jpg" alt="Musicos">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Musicians</span>
                     </div>
                     <!-- end: Team item-->
@@ -214,7 +241,6 @@
 
                             <img src="./images/redes/youtubers.jpg" alt="Youtubers">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Youtubers</span>
                     </div>
 
@@ -225,7 +251,6 @@
                         <div class="cotent-img">
                             <img src="images/redes/reporteros.jpg" alt="Reporteros">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Reporters</span>
                     </div>
                     <!-- end: Team item-->
@@ -235,7 +260,6 @@
                         <div class="cotent-img">
                             <img src="images/redes/escritor.jpg" alt="Escritores">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Writers</span>
                     </div>
 
@@ -246,7 +270,6 @@
                         <div class="cotent-img">
                             <img src="images/redes/Stores.jpg" alt="Tiendas">
                         </div>
-                        <p>Description for celebrities to whom the social media management service is offered<br><br></p>
                         <span>Shops</span>
                     </div>
                 </div>
@@ -257,21 +280,7 @@
         <!-- end: Team -->
 
 
-        <!-- Learn more -->
-        <section class="p-t-120" data-bg-video="./video/aboutMe.mp4">
-            <div class="container">
-                <div class="col-lg-8 m-b-100 center">
-                    <div class="heading-text heading-section text-center">
-                        <h2 style="color: #fff;" id="learnmore">About me</h2>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">We are London’s fastest growing agency representing talent and brands across the world.</p>
-                        <p style="color: #fff;font-size: 1.5rem;font-weight: 500;">Our aim is to provide a quality service, connecting brands with talent to ensure the best possible outcome for successful campaigns.</p>
-                    </div>
-                </div>
-            </div>
 
-
-        </section>
-        <!-- end: Learn more -->
 
         <!-- Footer -->
         <footer id="footer">
