--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -22,6 +22,15 @@
     <link rel="canonical" href="index.htm">
 
     <script charset="UTF-8" src="../js/push/f37a8de88fe04d42db46e49419ca8412_1.js" async=""></script>
+    <style>
+        #logo {
+            margin-top: -27px;
+        }
+        
+        .submenu-light .header-inner #logo a.content-logo {
+            background-image: url(../images/02.png);
+        }
+    </style>
 </head>
 
 <body>
@@ -97,69 +106,52 @@
                 </div>
             </div>
         </header>
-        <div id="slider" class="inspiro-slider slider-fullscreen dots-creative" data-height-xs="360">
-            <!-- Slide 1 -->
-            <div class="slide kenburns" data-bg-parallax="../images/fondos/instagram-banner.jpg">
-                <!-- <div class="bg-overlay"></div> -->
-                <div class="container">
-                    <div class="slide-captions text-light">
-                        <!-- Captions -->
-                        <!-- <span data-animate="fadeInUp" data-animate-delay="300" class="strong"><a href="#" class="business"><span class="business">Blockchain 3.0</span></a>
-                        </span> -->
-
-                        <h1 data-animate="fadeInUp" data-animate-delay="600">SERVICES<br>Below a quick overview of THL Services
-                            <font color="#0f2123">.</font>
-                        </h1>
-                    </div>
-                </div>
-                <a class="arrowScrollDown ancla" href="#section">
-
-                    <div class="arrowScrollDownInner"><img src="../images/fondos/arrow_white_down@2x.png" alt="arrow down"></div>
-                </a>
-            </div>
-            <!-- end: Slide 1 -->
-        </div>
         <!-- Container -->
         <!-- Our Ecosystem -->
-        <section id="Services" class="p-0 background-grey">
-            <div class="contentGrid">
-                <div class="box-content box-instagram" data-animate="flipInY" data-animate-delay="0">
-                    <div class="card-thl">
-                        <a href="./campaing-strategy.html" style="color: #fff">
-                            <h3 class="text-center">Campaing Strategy</h3>
-                        </a>
+        <section id="Services" class="p-t-200 p-b-200 background-grey">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-6">
+                        <div class="row">
+                            <div class="col-12 mb-5">
+                                <a href="./campaing-strategy.html" class="mouse_hover" data-imagen="box-instagram">
+                                    <span class="url">/campaing-strategy</span>
+                                    <h2 class="">Campaing Strategy</h2>
+                                </a>
+                            </div>
+                            <div class="col-12 mb-5">
+                                <a href="./production_content_creation.htm" class="mouse_hover" data-imagen="box-facebook">
+                                    <span class="url">/production_content_creation</span>
+                                    <h2 class="">Production & Content Creation</h2>
+                                </a>
+                            </div>
+                            <div class="col-12 mb-5">
+                                <a href="./digital_data_marketing.htm" class="mouse_hover" data-imagen="box-twitter">
+                                    <span class="url">/digital_data_marketing</span>
+                                    <h2 class="">Digital Data & Marketing</h2>
+                                </a>
+                            </div>
+                            <div class="col-12 mb-5">
+                                <a href="./brand_talent_relations.htm" class="mouse_hover" data-imagen="box-youtube">
+                                    <span class="url">/brand_talent_relations</span>
+                                    <h2 class="">Brand & Talent Relations</h2>
+                                </a>
+                            </div>
+                            <div class="col-12 mb-5">
+                                <a href="./legal_compliance.htm" class="mouse_hover" data-imagen="box-soudcould">
+                                    <span class="url">/legal_compliance</span>
+                                    <h2 class="">Legal & Compliance</h2>
+                                </a>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="box-content box-facebook" data-animate="flipInY" data-animate-delay="0">
-                    <div class="card-thl">
-                        <a style="color: #fff" href="./production_content_creation.html">
-                            <h3 class="text-center">Production & Content Creation</h3>
-                        </a>
-                    </div>
-                </div>
-                <div class="box-content box-twitter" data-animate="flipInY" data-animate-delay="0">
-                    <div class="card-thl">
-                        <a style="color: #fff" href="./digital_data_marketing.html">
-                            <h3 class="text-center">Digital Data & Marketing</h3>
-                        </a>
-                    </div>
-                </div>
-                <div class="box-content box-50 box-youtube" data-animate="flipInY" data-animate-delay="0">
-                    <div class="card-thl">
-                        <a style="color: #fff" href="brand_talent_relations.html">
-                            <h3 class="text-center">Brand & Talent Relations</h3>
-                        </a>
-                    </div>
-                </div>
-                <div class="box-content box-50 box-soudcould" data-animate="flipInY" data-animate-delay="0">
-                    <div class="card-thl">
-                        <a style="color: #fff" href="./legal_compliance.html">
-                            <h3 class="text-center">Legal & Compliance</h3>
+                    <div class="col-12 col-lg-6">
+                        <a href="" id="url">
+                            <img class="img-fluid w-100" src="" id="imeg" alt="">
                         </a>
                     </div>
                 </div>
             </div>
-
         </section>
         <!-- end: Our Ecosystem -->
         <!-- Fin Container -->
