Ajuste de animaciones

--- a/THL/pages/services.html
+++ b/THL/pages/services.html
@@ -69,7 +69,7 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="../index.htm" class="content-logo">
+                        <a href="../index.html" class="content-logo">
                             <!-- <img class="img-ligth img-general" src="../images/01.png" alt=""> -->
                         </a>
                     </div>
@@ -120,25 +120,25 @@
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
-                                <a href="./production_content_creation.htm" class="mouse_hover" data-imagen="box-facebook">
+                                <a href="./production_content_creation.html" class="mouse_hover" data-imagen="box-facebook">
                                     <span class="url">/production_content_creation</span>
                                     <h2 class="">Production & Content Creation</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
-                                <a href="./digital_data_marketing.htm" class="mouse_hover" data-imagen="box-twitter">
+                                <a href="./digital_data_marketing.html" class="mouse_hover" data-imagen="box-twitter">
                                     <span class="url">/digital_data_marketing</span>
                                     <h2 class="">Digital Data & Marketing</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
-                                <a href="./brand_talent_relations.htm" class="mouse_hover" data-imagen="box-youtube">
+                                <a href="./brand_talent_relations.html" class="mouse_hover" data-imagen="box-youtube">
                                     <span class="url">/brand_talent_relations</span>
                                     <h2 class="">Brand & Talent Relations</h2>
                                 </a>
                             </div>
                             <div class="col-12 mb-5">
-                                <a href="./legal_compliance.htm" class="mouse_hover" data-imagen="box-soudcould">
+                                <a href="./legal_compliance.html" class="mouse_hover" data-imagen="box-soudcould">
                                     <span class="url">/legal_compliance</span>
                                     <h2 class="">Legal & Compliance</h2>
                                 </a>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="col-12 col-lg-6">
                         <a href="" id="url">
-                            <img class="img-fluid w-100" src="" id="imeg" alt="">
+                            <img class="animate__animated animate__bounceInUp img-fluid w-100" src="" id="imeg" alt="">
                         </a>
                     </div>
                 </div>
